# xtl

./: .gitignore  CHANGELOG.md  README.md  genindex.html  index.html  pyproject.toml  requirements.txt  search.html  setup.cfg  setup.py  tox.ini  versions.json
.doctrees/api/: xtl.common.compatibility.doctree  xtl.common.doctree  xtl.common.options.doctree  xtl.common.validators.doctree
.doctrees/common/: options.doctree
.github/workflows/: gh-pages.yml  pages.yml  tox.yml
_sources/api/: xtl.common.tables.rst  xtl.config.settings.rst
_sources/cli/: index.rst
api/: xtl.common.options.html  xtl.config.html  xtl.config.version.html
cli/: index.html
dev/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/.doctrees/api/: modules.doctree  xtl.common.options.doctree  xtl.common.serializers.doctree  xtl.common.tables.doctree  xtl.common.validators.doctree  xtl.config.doctree  xtl.config.settings.doctree  xtl.config.version.doctree  xtl.doctree
dev/.doctrees/cli/: xtl.autoproc.doctree
dev/_sources/api/: xtl.common.options.rst  xtl.common.validators.rst  xtl.rst
dev/_sources/cli/: xtl.autoproc.rst
dev/_sources/common/: options.rst  tables.rst
dev/_static/: documentation_options.js  root_index.html
dev/_static/js/: version-selector.js
dev/api/: modules.html  xtl.common.compatibility.html  xtl.common.html  xtl.common.options.html  xtl.common.serializers.html  xtl.common.tables.html  xtl.common.validators.html  xtl.config.html  xtl.config.settings.html  xtl.config.version.html  xtl.html
dev/cli/: index.html  xtl.autoproc.html
dev/common/: index.html  options.html  tables.html
docs/: parse_inv_file.py
docs/source/: conf.py  index.rst  lexers.py
docs/source/_static/: root_index.html
docs/source/_templates/: layout.html
docs/source/api/: xtl.common.rst  xtl.config.rst
docs/source/common/: index.rst  options.rst
latest/: index.html  py-modindex.html
latest/.doctrees/: index.doctree
latest/.doctrees/api/: xtl.common.options.doctree  xtl.config.settings.doctree  xtl.doctree
latest/_sources/api/: xtl.common.compatibility.rst
latest/_static/js/: version-selector.js
latest/api/: modules.html  xtl.common.compatibility.html  xtl.common.html  xtl.common.serializers.html  xtl.common.validators.html  xtl.config.settings.html
latest/cli/: index.html
src/xtl/: __init__.py  version.py
src/xtl/GSAS2/: GSAS2Interface.py  __init__.py  components.py  objects.py  parameters.py  projects.py
src/xtl/automate/: __init__.py  batchfile.py  jobs.py  priority_system.py  shells.py  sites.py
src/xtl/chem/: compound.py
src/xtl/cli/: cli.py  cli_diffplot.py  cli_difftegrate.py  cli_gsas2.py  cli_h5peek.py  cli_pdbapi.py  cliio.py  settings.py  utils.py  utils_gsas2.py
src/xtl/cli/automate/: autoproc_utils.py  cli_autoproc.py
src/xtl/cli/autoproc/: __init__.py  cli_utils.py  fixnml.py  json2csv.py  options.py  process.py  process_wf.py  summarize.py
src/xtl/cli/diffraction/: __init__.py  cli_utils.py  geometry.py  sum.py
src/xtl/cli/math/: __init__.py  spacing.py
src/xtl/cli/saxs/: __init__.py  compare.py
src/xtl/cli/utilities/: common.py  console.py  decorators.py  logging.py
src/xtl/common/: __init__.py  annotated_dataclass.py  compatibility.py  data.py  labels.py  options.py  os.py  serializers.py  tables.py  undefined.py  validators.py
src/xtl/config/: __init__.py  config.py  options.py  settings.py  validators.py  version.py
src/xtl/crystallization/: applicators.py  experiments.py  reagents.py
src/xtl/diffraction/automate/: autoproc.py  autoproc_utils.py  xds_utils.py  (+1 more)
src/xtl/exceptions/: __init__.py  base.py  utils.py  warnings.py
src/xtl/files/: __init__.py  meta.py  npx.py  toml.py
src/xtl/io/: mmcif.py  npx.py
src/xtl/jobs/: config.py  jobs.py  pools.py
src/xtl/logging/: __init__.py  config.py  logger.py
src/xtl/math/: __init__.py  correlations.py  crystallography.py  filtering.py  trig.py  uuid.py
src/xtl/pdbapi/: __init__.py  attributes.py  client.py  nodes.py  operators.py  options.py  queries.py  schema.py
src/xtl/plots/: __init__.py
src/xtl/spectroscopy/: base.py  uvvis.py
src/xtl/structure/: atoms.py  files.py
src/xtl/units/: __init__.py
tests/: __init__.py  conftest.py
tests/GSAS2/: conftest.py  test_GSAS2Interface.py  test_parameters.py
tests/automate/: test_batchfile.py  test_jobs.py  test_priority_system.py  test_shells.py  test_sites.py
tests/common/: test_annotated_dataclasses.py  test_options.py  test_os.py  test_tables.py
tests/config/: test_options.py
tests/crystallization/: test_applicators.py  test_experiments.py  test_reagents.py
tests/crystallization/data/: make_test_data.py  reshape_data_ex1.npx  reshape_data_ex2.npx  reshape_data_ex3.npx
tests/diffraction/automate/: test_autoproc.py  test_autoproc_utils.py  test_gphl_utils.py
tests/diffraction/images/: conftest.py  test_datasets.py
tests/diffraction/reflections/: test_reflections.py
tests/files/: test_meta.py
tests/jobs/: test_job.py  test_jobs.py
tests/logging/: test_config.py
tests/math/: test_crystallography.py  test_trig.py
tests/pdbapi/: test_schema.py
tests/pdbapi/data/: test_nodes.py
tests/units/: test_init.py
v0.0.0dev0/: genindex.html
v0.0.0dev0/.doctrees/api/: xtl.config.settings.doctree
v0.0.0dev0/.doctrees/cli/: index.doctree
v0.0.0dev0/.doctrees/common/: tables.doctree
v0.0.0dev0/_sources/api/: xtl.common.serializers.rst  xtl.config.version.rst
v0.0.0dev0/api/: xtl.common.compatibility.html  xtl.common.tables.html  xtl.html
v0.1.0rc1/: searchindex.js
v0.1.0rc1/.doctrees/common/: index.doctree
v0.1.0rc1/_sources/api/: modules.rst
v0.1.0rc1/_static/: root_index.html
v0.1.0rc1/api/: xtl.common.html  xtl.common.options.html  xtl.config.version.html
v0.1.0rc1/cli/: xtl.autoproc.html
v0.1.0rc1/common/: options.html
(+33 files in other folders)
