[metadata]
name = xtl
version = attr: xtl.__version__
license = GPLv3
description = A collection of tools for macromolecular crystallography
long_description = file: README.md
author = Dimitris P. Triandafillidis
author_email = 64985525+dtriand@users.noreply.github.com
url = https://github.com/dtriand/xtl
;download_url =
;project_urls =
;    Bug Tracker =
;    Documentation =
platforms = win32
keywords = x-ray, diffraction, crystallography, powder, macromolecular, structural, biology, GSAS2
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.7
packages = find:
package_dir =
    =src
install_requires =
    click >= 7.1
    pyxray >= 1.6
    ConfigUpdater >= 1.0
    gemmi >= 0.3.8
    numpy >= 1.18.4
    tabulate >= 0.8
# Include files specified in MANIFEST.in
include_package_data = True

[options.packages.find]
where = src
exclude = scripts

[options.extras_require]
# Install via pip install xtl[full]
full =
    numpy
    scipy
interactive = matplotlib
gsas2 =
# Tested against GSAS-II revision 4371
    numpy
    scipy

[options.entry_points]
console_scripts =
    xtl = xtl.cli.cli:cli_main
    gsas2 = xtl.cli.cli_gsas2:cli_gsas

;[aliases]
;test = pytest