[metadata]
name = xtl
version = attr: xtl.__version__
license = GPLv3
description = A collection of tools for macromolecular crystallography
long_description = file: README.md
author = Dimitris P. Triandafillidis
author_email = 64985525+dtriand@users.noreply.github.com
url = https://github.com/dtriand/xtl
;download_url =
;project_urls =
;    Bug Tracker =
;    Documentation =
platforms = win32
keywords = x-ray, diffraction, crystallography, powder, macromolecular, structural, biology, GSAS2
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.7
packages = find:
package_dir =
    =src
install_requires =
    click>=8.1.3
    ConfigUpdater>=3.1.1
    fabio>=2023.6.0
    gemmi>=0.5.5
    hdf5plugin>=4.2.0
    matplotlib>=3.8.0
    numpy>=1.26.0
    pint>=0.19.2
    pyfai>=2023.9.0
    pyxray>=1.7.0
    requests>=2.31.0
    rich>=13.6.0
    tabulate>=0.8.10
    typer>=0.9.0
tests_require =
    pytest >= 7.2.0
    pytest-mock >= 3.10.0
# Include files specified in MANIFEST.in
include_package_data = True

[options.packages.find]
where = src
exclude = scripts

[options.extras_require]
# Install via pip install xtl[full]
full =
    numpy
    scipy
interactive = matplotlib
gsas2 =
# Tested against GSAS-II revision 4371
    numpy
    scipy

[options.entry_points]
console_scripts =
    xtl = xtl.cli.cli:cli_main
    gsas2 = xtl.cli.cli_gsas2:cli_gsas
    pdbapi = xtl.cli.cli_pdbapi:cli_pdbapi
    diffplot = xtl.cli.cli_diffplot:app
    difftegrate = xtl.cli.cli_difftegrate:app
    h5peek = xtl.cli.cli_h5peek:app
    xtl.autoproc = xtl.cli.automate.cli_autoproc:app
;[aliases]
;test = pytest